--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@
 body {
 	font-family: "Open Sans", sans-serif;
 	margin: 0;
-	padding: 1rem;
+	
 }
 
 .wrapper {
@@ -18,11 +18,10 @@ ol {
 	padding: 0;
 }
 
-li + li {
-	margin-top: 1rem;
-}
 
-li {
+
+li.inf {
+	margin-top: 1rem;
 	display: flex;
 	align-items: center;
 	gap: 1rem;
@@ -33,7 +32,7 @@ li {
 	box-shadow: 0.25rem 0.25rem 0.75rem rgb(0 0 0 / 0.1);
 }
 
-li::before {
+li.inf::before {
 
 	width: 2em;
 	height: 2em;
